@startuml

package "Models" {
  class User {
    +id: int
    +telegram_id: int
    +username: str
    +full_name: str
    +created_at: datetime
  }
  
  class Schedule {
    +id: int
    +user_id: int
    +day_of_week: int
    +start_time: str
    +end_time: str
    +subject_name: str
    +subject_type: str
    +is_active: bool
    +room_number: str
  }
  
  class Task {
    +id: int
    +user_id: int
    +title: str
    +description: str
    +deadline: datetime
    +priority: str
    +is_completed: bool
    +created_at: datetime
  }
  
  class Event {
    +id: int
    +user_id: int
    +title: str
    +description: str
    +event_date: datetime
    +reminder_before: int
    +is_recurring: bool
    +recurrence_pattern: str
    +next_reminder_time: datetime
  }
}

package "Database" {
  class Database {
    +__init__(db_path: str)
    +_init_db()
    +add_user()
    +get_user()
    +add_schedule_item()
    +get_user_schedule()
    +add_task()
    +get_user_tasks()
    +add_event()
    +get_upcoming_events()
    +close()
  }
}

package "Bot" {
  class BotHandler {
    +dp: Dispatcher
    +db: Database
    +register_handlers()
    +start_command()
    +help_command()
    +add_task_command()
    +schedule_command()
  }
}

' Связи
User "1" -- "*" Schedule : имеет
User "1" -- "*" Task : имеет
User "1" -- "*" Event : имеет
Database -- User : управляет
Database -- Schedule : управляет
Database -- Task : управляет
Database -- Event : управляет
BotHandler --> Database : использует

@enduml